magit (0.8.2-perusio1.1) unstable; urgency=low

  * New upstream snapshot.

 -- António P. P. Almeida <appa@perusio.net>  Sat, 02 Oct 2010 17:27:07 +0100

magit (0.8.2-perusio1.0) unstable; urgency=low

  * New upstream release.

 -- António P. P. Almeida <appa@perusio.net>  Sun, 29 Aug 2010 18:10:38 +0100

magit (0.8.1-1.0) unstable; urgency=low

  [ António Almeida ]
  * New upstream release.

 -- António P. P. Almeida <perusio@gmail.com>  Sun, 13 Jun 2010 22:14:50 +0100

magit (0.7-1.1) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * Non-maintainer upload.
  * (Including pending maintainer changes, in wait of sponsoring.)
  * Bump Standard-Version to 3.8.4 (no changes needed)
  * Add Build-Dep on autoconf and automake, to support "autoreconf -fi"
  * debian/rules: install NEWS as upstream changelog
  * debian/docs: install README and AUTHORS as documentation

  [ Marius Vollmer ]
  * Added Homepage, Vcs-Git, and Vcs-Browser fields.
  * Added git-core and emacs to Depends (closes: 529040).
  * Use /usr/bin/emacsclient always (closes: 530266).
  * Don't include /usr/share/info/dir.gz (closes: 549590).
  * Switched to source format 3.0 (quilt).
  * Don't ship any generated files; instead,
    call autoreconf from debian/rules.

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 10 Mar 2010 09:49:14 +0100

magit (0.7-1) unstable; urgency=low

  * first official debian upload (closes: #518818)

  [ RISKO Gergely ]
  * pointer added to GFDL-1.2 in debian/copyright
  * changed debian/compat to 7
  * standards-version to 3.8.1

  [ Marius Vollmer ]
  * Follow Debian Emacsen policy.
    - Use scripts in /usr/lib/emacsen-common/packages to
      byte-compile during installation.
  * List all authors in debian/copyright.
  * Lintian fixes.

  New upstream release.

  * Tagging, on 't' and 'T'.

  * Stashing, on 'z' and 'Z'.

  * Wazzup, on 'w'.  Wazzup gives you an overview over how other
    branches relate to the current one.
